k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-postgres
spec:
  selector:
    app: voting-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
