k8s/ingress-vote-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-app-ingress
  namespace: vote
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: vote.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-app
                port:
                  number: 80
